--- a/gb/21/9/23/n13254602.md
+++ b/gb/21/9/23/n13254602.md
@@ -1,62 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvscgb326/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mvscgb326/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvscgb326/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvscgb326/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvscgb326/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvscgb326/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvscgb326/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>德国经济办事处长林百科视察高中生接种疫苗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13254605-518251-600x400.jpg" />
 <h6>桃园市长郑文灿邀请德国经济办事处林百科处长一同视察高中生接种疫苗。（桃园市府新闻处提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月23日讯】（大纪元记者徐乃义台湾桃园报导）桃园市长郑文灿23日邀请<ahref="https://github.com/mvscgb326/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%8A%9E%E4%BA%8B%E5%A4%84.md#1">德国经济办事处</a><ahref="https://github.com/mvscgb326/djy/blob/master/gb/tag/%E6%9E%97%E7%99%BE%E7%A7%91.md#1">林百科</a>处长一同前往桃园高中，视察高中生BNT疫苗接种情形。郑文灿表示，桃园22日展开高、国中生BNT疫苗接种，由德国与美国辉瑞药厂合作开发的BNT疫苗，安全有效且具有良好保护力，是目前国内唯一可供青少年接种的疫苗。</p>
-<p>郑文灿感谢<ahref="https://github.com/mvscgb326/djy/blob/master/gb/tag/%E6%9E%97%E7%99%BE%E7%A7%91.md#1">林百科</a>（Axel Limberg）、德国在台协会前处长王子陶（Thomas Prinz），于疫情爆发时，表达德方支持台湾购买BNT疫苗的计划，在购买疫苗交涉过程中也积极促成，并协助BNT疫苗来台的各项工作，他也陪同林百科处长及王子陶前处长共同晋见总统，而德方始终表达支持台湾购买BNT疫苗的立场，并感谢鸿海、台积电、慈济基金会和政府合作完成购买1,500万剂BNT疫苗，对于台湾防疫工作、提升疫苗覆盖率，将有很大帮助。</p>
+<p>【大纪元2021年09月23日讯】（大纪元记者徐乃义台湾桃园报导）桃园市长郑文灿23日邀请<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%8A%9E%E4%BA%8B%E5%A4%84.md#1">德国经济办事处</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9E%97%E7%99%BE%E7%A7%91.md#1">林百科</a>处长一同前往桃园高中，视察高中生BNT疫苗接种情形。郑文灿表示，桃园22日展开高、国中生BNT疫苗接种，由德国与美国辉瑞药厂合作开发的BNT疫苗，安全有效且具有良好保护力，是目前国内唯一可供青少年接种的疫苗。</p>
+<p>郑文灿感谢<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9E%97%E7%99%BE%E7%A7%91.md#1">林百科</a>（Axel Limberg）、德国在台协会前处长王子陶（Thomas Prinz），于疫情爆发时，表达德方支持台湾购买BNT疫苗的计划，在购买疫苗交涉过程中也积极促成，并协助BNT疫苗来台的各项工作，他也陪同林百科处长及王子陶前处长共同晋见总统，而德方始终表达支持台湾购买BNT疫苗的立场，并感谢鸿海、台积电、慈济基金会和政府合作完成购买1,500万剂BNT疫苗，对于台湾防疫工作、提升疫苗覆盖率，将有很大帮助。</p>
 <p>郑文灿表示，桃园高达97%高、国中生同意疫苗接种，接种意愿为全国第一，市府将于2周内为13万名高、国中生完成BNT疫苗接种，23日桃园高中疫苗接种由台北荣民总医院桃园分院执行，采取改良宇美町式打法的“桃园打法”，由医护人员到每个班级施打，学生不用集中起来，也不须大型场地，可以打得快又好。郑文灿也提醒同学，接种疫苗后应多喝水，并留意是否产生副作用，如接种后感到不适，经家长同意后可请1至3天的疫苗假。郑文灿强调，目前桃园完成第一剂接种的人口已经超过50%，预计10月底前将可达到70%。</p>
-<p>林百科表示，BNT疫苗是在台湾唯一可以供青少年接种的疫苗，十分荣幸可以到桃园见证疫苗施打的过程。台湾采取让疫苗进到校园来为学生施打的方式，十分有意义，他也相信疫苗覆盖率提升之后，台湾很快可以解除疫情危机，回到常态生活，而<ahref="https://github.com/mvscgb326/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%8A%9E%E4%BA%8B%E5%A4%84.md#1">德国经济办事处</a>乐见来自德国的BNT疫苗协助台湾度过疫情，未来将持续提供必要的支援。◇</p>
+<p>林百科表示，BNT疫苗是在台湾唯一可以供青少年接种的疫苗，十分荣幸可以到桃园见证疫苗施打的过程。台湾采取让疫苗进到校园来为学生施打的方式，十分有意义，他也相信疫苗覆盖率提升之后，台湾很快可以解除疫情危机，回到常态生活，而<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%8A%9E%E4%BA%8B%E5%A4%84.md#1">德国经济办事处</a>乐见来自德国的BNT疫苗协助台湾度过疫情，未来将持续提供必要的支援。◇</p>
 <p>责任编辑：李悦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/20/8/20/n12345397.md#1">“德国工业4.0研讨会” 盼台德合作稳健发展</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/20/9/2/n12375267.md#1">台德携手整合半导体产业 打造雷射服务中心</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/20/9/7/n12386571.md#1">四小龙望尘莫及！德对台出口增7.3%</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/20/11/25/n12574120.md#1">德国经济办事处首次在桃园举办德商CEO午餐会</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/2/4/n12732800.md#1">调查：逾6成德商乐观看待今年台湾经济</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/7/9/n13078589.md#1">落实企业社会责任！默克、西门子等在台德商入列</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/23/n13254609.md#1">郑文灿视察国强非营利幼儿园  让年轻敢生能养</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/23/n13254614.md#1">失智老妇忘记已搬家 回旧址误以为小偷闯空门</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/23/n13254304.md#1">桃园市议员林政贤建议  “一里一干事”为目标</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/23/n13254180.md#1">牙釉基质衍生物重建牙周治疗  坏牙保留机会大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/20/n12345397.md#1">“德国工业4.0研讨会” 盼台德合作稳健发展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/2/n12375267.md#1">台德携手整合半导体产业 打造雷射服务中心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/7/n12386571.md#1">四小龙望尘莫及！德对台出口增7.3%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/25/n12574120.md#1">德国经济办事处首次在桃园举办德商CEO午餐会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/4/n12732800.md#1">调查：逾6成德商乐观看待今年台湾经济</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/9/n13078589.md#1">落实企业社会责任！默克、西门子等在台德商入列</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680175.md#1">醒吾科大携手智泰科技推动AI教育</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899641.md#1" target="_blank">抗日战争期间中共做了啥？八年抗战期间中共作为大事纪要</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/14/n13234239.md#1">【未解之谜】穿越时空 二战飞行员的奇遇</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250236.md#1">【百年真相】土匪还是英雄？还原“座山雕”</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/22/n13253523.md#1">【财商天下】海航易主 方大集团再次“蛇吞象”</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/22/n13253806.md#1">【时事纵横】习大秘或晋升 北京急删红歌内幕</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250822.md#1">【横河观点】美生态健康联盟与武毒所合作曝光</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13248548.md#1">【探索时分】歼20数量之谜 竟然只有30余架？</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/19/n13245490.md#1">从阿里到恒大 习近平20大前清场？（下）</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250583.md#1">未阻止滴滴赴美上市 传刘鹤党内检讨</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250699.md#1">央视中秋晚会爆假唱 明星嘴闭上声音还在</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/20/n13248325.md#1">贴文纪念安钧璨冥诞 安以轩连续7年没间断</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/20/n13248519.md#1">IG晒录歌照拟闯乐坛？刘嘉玲笑称隔行如隔山</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250887.md#1">中秋夜晒与儿女亲吻照 章子怡称忙到忘吃月饼</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13250589.md#1">林志玲中秋节送祝福 自拍照获赞“越来越美”</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/18/n13243559.md#1">柚子皮是宝！1个妙用除臭味、清油垢</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/21/n13249714.md#1">摸黑回击野熊攻击 日本老翁问：你到底是谁？</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/20/n13247176.md#1">台北阿伯在公园吹口琴 两只鹅神奇回应</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/18/n13243338.md#1">丝瓜消便秘、美容  有5大健康功效</a></li>
-<li><a href="https://github.com/mvscgb326/djy/blob/master/gb/21/9/22/n13252281.md#1">美国研发“蔬菜疫苗” 吃下肚子就接种完毕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvscgb326/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvscgb326/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/23/n13254602.htm">德国经济办事处长林百科视察高中生接种疫苗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/23/n13254602.htm">德国经济办事处长林百科视察高中生接种疫苗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvscgb326/djy/blob/master/gb/21/9/23/n13254602.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvscgb326/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvscgb326/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvscgb326/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvscgb326/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvscgb326/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/23/n13254602.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
